--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1701,7 +1701,7 @@
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			box-shadow: 0 0 0 2px #21b2a6;
+			box-shadow: 0 0 0 2px #C3DDFF;
 		}
 
 	.select-wrapper {
@@ -1812,7 +1812,7 @@
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			box-shadow: 0 0 0 2px #21b2a6;
+			box-shadow: 0 0 0 2px #E291C6;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -1824,27 +1824,27 @@
 	}
 
 	::-webkit-input-placeholder {
-		color: rgba(255, 255, 255, 0.5) !important;
+		color: #8D99AE/*rgba(255, 255, 255, 0.9)*/ !important;
 		opacity: 1.0;
 	}
 
 	:-moz-placeholder {
-		color: rgba(255, 255, 255, 0.5) !important;
+		color: #8D99AE/*rgba(255, 255, 255, 0.9)*/ !important;
 		opacity: 1.0;
 	}
 
 	::-moz-placeholder {
-		color: rgba(255, 255, 255, 0.5) !important;
+		color: #8D99AE/*rgba(255, 255, 255, 0.9)*/ !important;
 		opacity: 1.0;
 	}
 
 	:-ms-input-placeholder {
-		color: rgba(255, 255, 255, 0.5) !important;
+		color: #8D99AE/*rgba(255, 255, 255, 0.9)*/ !important;
 		opacity: 1.0;
 	}
 
 	.formerize-placeholder {
-		color: rgba(255, 255, 255, 0.5) !important;
+		color: #8D99AE/*rgba(255, 255, 255, 0.9)*/ !important;
 		opacity: 1.0;
 	}
 
@@ -2329,7 +2329,7 @@
 			input[type="button"].special:active,
 			button.special:active,
 			.button.special:active {
-				background-color: #eb341c !important;
+				background-color: #F7D6EB !important;
 			}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
@@ -2713,7 +2713,7 @@
 			.wrapper.style1 input[type="checkbox"]:checked + label:before,
 			.wrapper.style1 input[type="radio"]:checked + label:before {
 				background: #8D99AE;
-				color: #21b2a6;
+				color: #E291C6;
 			}
 
 			.wrapper.style1 ::-webkit-input-placeholder {
@@ -3852,4 +3852,29 @@
 	body.is-mobile.landing #footer {
 		background-color: #1d242a;
 	}
+
+	.modal {
+    	display: none; /* Hidden by default */
+    	position: fixed; /* Stay in place */
+    	z-index: 1; /* Sit on top */
+    	padding-top: 100px; /* Location of the box */
+    	left: 0;
+    	top: 0;
+    	width: 100%; /* Full width */
+    	height: 100%; /* Full height */
+    	overflow: auto; /* Enable scroll if needed */
+    	background-color: rgb(0,0,0); /* Fallback color */
+    	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+	}
+
+	.modal-content {
+    	background-color: #EFEFF4;
+    	font: #8D99AE;
+    	margin: auto;
+    	padding: 20px;
+    	border: 1px solid #888;
+    	width: 40%;
+	}
+
+
 
